# russia_fuel_telegram

./: .env.example  .gitignore  README.md  pyproject.toml  run_pipeline.sh
channels/: channels_history.csv  channels_seed.csv  channels_test.csv  channels_truckers.csv  keywords_ru.yaml
data/: donnees_fuel_russia.csv
data/processed/: merged_enriched.parquet
notebooks/: analysis.ipynb
src/: __init__.py  cli.py  enrich_dataset.py  features.py  keywords.py  model.py  model_helpers.py  nlp.py  normalization.py  official.py  scraping.py
tests/: test_features.py  test_text_utils.py
