[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rft"
version = "0.1.0"
description = "Russia fuel Telegram monitoring toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Analyst", email = "analyst@example.com"}]
dependencies = [
  "telethon>=1.35.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "PyYAML>=6.0",
  "tqdm>=4.66.0",
  "regex>=2023.0.0",
  "scikit-learn>=1.4.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
rft = "rft.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
